Resolve conversations.